--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.30.0",
         "recharts": "^2.12.2",
-        "socket.io-client": "^4.8.1"
+        "socket.io-client": "^4.8.1",
+        "react-hot-toast": "^2.4.1",
+        "react-redux": "^9.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
